# omnicanon

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
scripts/: ingest.py
src/omnicanon/: __init__.py  cli.py
src/omnicanon/api/: app.py
src/omnicanon/bench/: __init__.py  harness.py  scoring.py
src/omnicanon/bench/tasks/: theobench_v1.jsonl
src/omnicanon/corpus/: __init__.py  loader.py  models.py
src/omnicanon/corpus/data/: dhammapada_sample.json  gita_sample.json  kjv_sample.json  quran_sample.json
src/omnicanon/engine/: __init__.py  answer.py  bm25.py  retriever.py  verifier.py
src/omnicanon/scriptorium/: __init__.py  correction.py  pipeline.py
tests/: test_api.py  test_bench.py  test_corpus.py  test_retriever.py  test_scriptorium.py  test_verifier.py
